# open-ledger

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  VISION.md  docker-compose.yml  pyproject.toml  requirements.txt  run_mcp.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: attri-dev-kit.yml  ci.yml
data/: .gitkeep  openledger.db
docs/: claude-connector.md  demo.md
scripts/: schema.sql  seed.py  smoke_test.py
src/: config.py  container.py  db.py  mcp_server.py  money.py  serialization.py
src/domain/: constants.py  errors.py
src/infrastructure/: database.py  identity.py
src/repositories/: protocols.py  sqlite.py
src/services/: accounts.py  audit.py  ledger.py  query.py  reports.py
tests/: conftest.py  test_ledger.py
