[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openledger"
version = "0.1.0"
description = "Local-first double-entry accounting, queryable by humans and agents — MCP over a SQLite ledger."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Attri", email = "engineering@attri.ai" },
]
keywords = ["mcp", "claude", "accounting", "double-entry", "ledger", "agent", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "aiosqlite>=0.20.0",
    "mcp[cli]>=1.27.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.5",
    "mypy>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/Attri-Inc/open-ledger"
Issues = "https://github.com/Attri-Inc/open-ledger/issues"

[project.scripts]
openledger = "src.mcp_server:mcp.run"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
